--- a/trpct3app/package.json
+++ b/trpct3app/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.1",
+    "groq-sdk": "^0.22.0",
     "lucide-react": "^0.511.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
